--- a/cis1500-fall2022-finalproject-chadhakala/adventureGame/pom.xml
+++ b/cis1500-fall2022-finalproject-chadhakala/adventureGame/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>adventureFinal</artifactId>
+    <artifactId>adventureGame</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>adventureFinal</name>
+    <name>adventureGame</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,7 +24,6 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>19</version>
-            <scope>system</scope>
         </dependency>
 
         <dependency>
@@ -61,8 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.adventurefinal/com.example.adventurefinal.HelloApplication
-                            </mainClass>
+                            <mainClass>com.example.adventuregame/com.example.adventuregame.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
